--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -6,11 +6,14 @@
 
     <TextView
         android:id="@+id/item_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="@dimen/normal_text_size"
+        android:background="@color/gray"
         android:layout_margin="@dimen/normal_margin"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:padding="@dimen/normal_margin"
+        android:gravity="center"/>
 
 </RelativeLayout>
