Update project to new version

--- a/app/src/main/res/layout/fragment_demo_view_pager.xml
+++ b/app/src/main/res/layout/fragment_demo_view_pager.xml
@@ -5,12 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.luffy.ui_demo.ViewPagerWithDot.DemoViewPagerFragment">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/dot_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
