--- a/app/src/main/res/layout/fragment_demo_grid_view.xml
+++ b/app/src/main/res/layout/fragment_demo_grid_view.xml
@@ -5,7 +5,7 @@
     tools:context="com.example.luffy.ui_demo.ItemSameWidthGridView.DemoGridViewFragment"
     android:background="@color/white">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
